components/kubeflow/kserve-inference.yaml
apiVersion: v1
kind: Service
metadata:
  name: nimbusguard-dqn-model-service
  namespace: nimbusguard-serving
spec:
  selector:
    app: nimbusguard-dqn-model
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: grpc
    port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
